<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">百年吴越</string>

    <string name="same_day_navigation_drawer_open">打开左侧菜单栏</string>
    <string name="same_day_navigation_drawer_close">关闭左侧菜单栏</string>
    <string name="please_name">请输入姓名</string>
    <string name="please_phone">请输入手机号</string>
    <string name="please_bir">请选择生日</string>
    <string name="no_group_projects_text">暂无团购服务项目</string>
    <string name="no_projects_text">暂无服务项目</string>
    <string name="used_count_string">次数</string>
    <string name="total_money">项目总价格</string>

    <string name="total_count">项目总次数</string>

    <string name="start_time_string">选择办理时间</string>
    <string name="start_end_string">选择到期时间</string>


    <string name="projects_dialog_update_title">修改服务项目</string>
    <string name="projects_dialog_add_title">添加服务项目</string>

    <string name="projects_update_name">修改项目名:</string>

    <string name="projects_add_name">添加项目名:</string>

    <string name="beauty_card_kh">Ta的卡包（%1$s）</string>

    <string name="beauty_card_few" tools:ignore="ExtraTranslation">(%1$d张卡)</string>


    <string name="beauty_select_consumption_time">选择消费日期</string>



    <string name="beauty_select_consumption_md">选择消费门店</string>
    <string name="update">修 改</string>
    <string name="add">添 加</string>
    <string name="yes">确 定</string>
    <string name="cance">取 消</string>

    <!--服务-->
    <string name="beauty_server_name">服务名称</string>

    <string name="beauty_server_type">服务类型</string>

    <string name="beauty_server_money">服务价格</string>

    <string name="beauty_server_time">服务时长</string>

    <string name="beauty_server_sales_volume">服务销量</string>

    <!--产品-->
    <string name="beauty_cp_money">产品价格</string>

    <string name="beauty_cp_vip_money">产品会员价</string>

    <string name="beauty_cp_specifications">产品规格</string>

    <string name="beauty_cp_original_price">产品原价</string>

    <string name="beauty_cp_sales_volume">产品销量</string>

    <string name="beauty_cp_name">产品名称</string>

    <string name="beauty_not_enabled">未启用</string>

    <!--项目卡-->
    <string name="beauty_xmk_money">项目卡价格</string>

    <string name="beauty_xmk_vip_money">项目卡会员价</string>

    <string name="beauty_xmk_specifications">项目卡规格</string>

    <string name="beauty_xmk_original_price">项目卡原价</string>

    <string name="beauty_xmk_sales_volume">项目卡销量</string>

    <string name="beauty_xmk_name">项目卡名称</string>

    <string name="beauty_xmk_expire_time">选择到期日期</string>

    <string name="beauty_xmk_total_num">总次数</string>

    <string name="beauty_xmk_infinite_num">无限</string>

    <string name="beauty_xmk_frequency_num">次数</string>




    <!--储蓄卡-->
    <string name="beauty_cxk_money">储蓄卡价格</string>

    <string name="beauty_cxk_vip_money">储蓄卡会员价</string>

    <string name="beauty_cxk_specifications">储蓄卡规格</string>

    <string name="beauty_cxk_original_price">储蓄卡原价</string>

    <string name="beauty_cxk_sales_volume">储蓄卡销量</string>

    <string name="beauty_cxk_name">储蓄卡名称</string>

    <string name="beauty_cxk_expire_time">选择到期日期</string>

    <string name="beauty_cxk_recharge_money">充值金额</string>

    <string name="beauty_cxk_give_money">赠送金额</string>

    <string name="beauty_cxk_discount">折扣数</string>




    <string name="payment_amount">输入缴费金额</string>

    <string name="payment_amount_surplus">输入剩余金额</string>
    <string name="title_activity_edit_projects">EditProjectsActivity</string>

    <string name="projects_name_txt">请输入项目名</string>
    <string name="projects_update_txt">请输入修改的名称</string>


    <string name="beauty_server_state">选择查询的类型</string>
    <string name="beauty_within_saleing_txt">售卖中(%1$d)</string>
    <string name="beauty_within_dismount_txt">已下架(%1$d)</string>

    <string name="beauty_within_add_server">添加服务</string>

    <string name="beauty_within_add_cp">添加产品</string>

    <string name="beauty_within_add_xmk">添加项目卡</string>

    <string name="beauty_within_add_cxk">添加储蓄卡</string>


    <string name="beauty_within_input_name_phone">请输入客户手机号或姓名</string>

    <string name="beauty_within_select_all_text">共查询到%1$d位顾客</string>

    <string name="beauty_within_hint_recharge_money">请输入充值金额</string>

    <string name="beauty_within_hint_give_money">请输入赠送金额</string>

    <string name="beauty_kh_info_text_small1">%1$d 张</string>

    <string name="beauty_kh_info_text_small2">%1$d 元</string>

    <string name="beauty_kh_info_text_small3">%1$d 个</string>

    <string name="beauty_kh_info_text_small4">顾客到店次数 %1$d 次</string>

    <string name="beauty_kh_info_text_small5">%1$d 年</string>



    <string name="beauty_add_service_select_fuwu">查询到上架%1$d个服务</string>

    <string name="beauty_add_service_choice_fuwu">已选择%1$d个</string>

    <string name="beauty_add_service_select_cxk">查询到%1$d个储蓄卡</string>






</resources>

