<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white">

    <!--content-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/content_left_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/beauty_within_text_frame"
        android:orientation="vertical"
        app:layout_heightPercent="39%"
        app:layout_marginLeftPercent="1%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="2%"
        app:layout_widthPercent="31%">

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:id="@+id/content_left_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/beauty_kh_info_content_layout_top_bg"
            app:layout_heightPercent="25%"
            app:layout_paddingLeftPercent="5%"
            app:layout_paddingRightPercent="5%">

            <TextView
                android:id="@+id/content_left_layout1_text1"
                style="@style/khinfo_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="储蓄卡" />

            <TextView
                android:id="@+id/content_left_layout1_text2"
                style="@style/khinfo_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/content_left_layout1_text1"
                android:text="@string/beauty_kh_info_text_small1" />

            <TextView
                android:id="@+id/content_left_layout1_text3"
                style="@style/khinfo_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@id/content_left_layout1_text4"
                android:text="余 额:" />

            <TextView
                android:id="@+id/content_left_layout1_text4"
                style="@style/khinfo_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/beauty_kh_info_text_small2" />


        </com.zhy.android.percent.support.PercentRelativeLayout>

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:id="@+id/content_left_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/beauty_kh_info_left_layout_color2"
            app:layout_heightPercent="25%"
            app:layout_paddingLeftPercent="5%"
            app:layout_paddingRightPercent="5%">

            <TextView
                android:id="@+id/content_left_layout2_text1"
                style="@style/khinfo_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="项目卡" />

            <TextView
                android:id="@+id/content_left_layout2_text2"
                style="@style/khinfo_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/content_left_layout2_text1"
                android:text="@string/beauty_kh_info_text_small1" />

            <TextView
                android:id="@+id/content_left_layout2_text3"
                style="@style/khinfo_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@id/content_left_layout2_text4"
                android:text="余 额:" />

            <TextView
                android:id="@+id/content_left_layout2_text4"
                style="@style/khinfo_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/beauty_kh_info_text_small2" />
        </com.zhy.android.percent.support.PercentRelativeLayout>

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:id="@+id/content_left_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/beauty_kh_info_left_layout_color3"
            app:layout_heightPercent="25%"
            app:layout_paddingLeftPercent="5%"
            app:layout_paddingRightPercent="5%">

            <TextView
                android:id="@+id/content_left_layout3_text1"
                style="@style/khinfo_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="礼品卡" />

            <TextView
                android:id="@+id/content_left_layout3_text2"
                style="@style/khinfo_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/content_left_layout3_text1"
                android:text="@string/beauty_kh_info_text_small1" />

            <TextView
                android:id="@+id/content_left_layout3_text3"
                style="@style/khinfo_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@id/content_left_layout3_text4"
                android:text="余 额:" />

            <TextView
                android:id="@+id/content_left_layout3_text4"
                style="@style/khinfo_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/beauty_kh_info_text_small2" />
        </com.zhy.android.percent.support.PercentRelativeLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:id="@+id/content_left_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/beauty_kh_info_content_layout_bottom_bg"
            android:orientation="horizontal"
            app:layout_heightPercent="25%"
            app:layout_paddingLeftPercent="5%"
            app:layout_paddingRightPercent="5%">

            <com.zhy.android.percent.support.PercentLinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_widthPercent="22.5%">

                <TextView
                    style="@style/khinfo_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="单次服务" />

                <TextView
                    android:id="@+id/dc_fuwu"
                    style="@style/khinfo_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beauty_kh_info_text_small3" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_widthPercent="22.5%">

                <TextView
                    style="@style/khinfo_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="优惠券" />

                <TextView
                    android:id="@+id/yhq"
                    style="@style/khinfo_text3"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beauty_kh_info_text_small1" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_widthPercent="22.5%">

                <TextView

                    style="@style/khinfo_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="欠款" />

                <TextView
                    android:id="@+id/qk"
                    style="@style/khinfo_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beauty_kh_info_text_small2" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_widthPercent="22.5%">

                <TextView
                    style="@style/khinfo_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="赠送金" />

                <TextView
                    android:id="@+id/zsj"
                    style="@style/khinfo_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beauty_kh_info_text_small2" />

            </com.zhy.android.percent.support.PercentLinearLayout>


        </com.zhy.android.percent.support.PercentLinearLayout>

    </com.zhy.android.percent.support.PercentLinearLayout>


    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/content_right_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/content_left_layout"
        android:background="@drawable/beauty_within_text_frame"
        android:orientation="vertical"
        app:layout_heightPercent="39%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="2%">

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:id="@+id/content_right_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/beauty_kh_info_left_layout_color5"
            app:layout_heightPercent="19%"
            app:layout_paddingLeftPercent="2%"
            app:layout_paddingRightPercent="2%">

            <TextView
                android:id="@+id/content_right_layout2_text1"
                style="@style/khinfo_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="到店情况"
                android:textSize="20sp" />

            <com.zhy.android.percent.support.PercentLinearLayout
                android:id="@+id/content_right_layout3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/content_right_layout2_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/arrow_left_black" />

                <TextView
                    android:id="@+id/content_right_layout2_text2"
                    style="@style/khinfo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/beauty_kh_info_text_small5" />

                <ImageView
                    android:id="@+id/content_right_layout2_img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/arrow_right_black" />


            </com.zhy.android.percent.support.PercentLinearLayout>

            <TextView
                android:id="@+id/content_right_layout2_text3"
                style="@style/khinfo_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/beauty_kh_info_text_small4"
                android:textSize="20sp" />

        </com.zhy.android.percent.support.PercentRelativeLayout>

        <ListView
            android:id="@+id/content_right_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            app:layout_paddingLeftPercent="2%"
            app:layout_paddingRightPercent="2%"></ListView>


    </com.zhy.android.percent.support.PercentLinearLayout>

    <cn.droidlover.xrecyclerview.XRecyclerView
        android:id="@+id/xrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">


    </cn.droidlover.xrecyclerview.XRecyclerView>


</com.zhy.android.percent.support.PercentRelativeLayout>


